--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/AlphpaAnd50/mesto#readme",
   "dependencies": {
-    "core-js": "^3.25.1",
-    "jquery": "^3.6.1"
+    "core-js": "^3.25.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
@@ -34,6 +33,7 @@
     "postcss-loader": "^7.0.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.0"
+    "webpack-dev-server": "^4.11.0",
+    "jquery": "^3.6.1"
   }
 }
